# layerforge

./: CITATION.cff  COMMERCIAL_LICENSE  LICENSE  Pipfile  README.md  mkdocs.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: docs.yaml  tests.yaml
docs/: classes.puml  cli_reference.md  configuration.md  development.md  features.md  getting_started.md  index.md  reference_mark_algorithm.md  technologies_used.md
docs/diagrams/: classes.puml  layerforge.domain.shapes.puml  packages.puml
layerforge/: __init__.py  cli.py  util.py
layerforge/domain/shapes/: __init__.py  arrow.py  base_shape.py  circle.py  square.py  triangle.py
layerforge/models/: __init__.py  mesh_loader.py  model.py  model_factory.py  reference_mark_manager.py  slice.py
layerforge/models/loading/: __init__.py  base.py  mesh.py
layerforge/models/loading/implementations/: __init__.py  trimesh_loader.py
layerforge/models/reference_marks/: __init__.py  config.py  reference_mark.py  reference_mark_adjuster.py  reference_mark_calculator.py  reference_mark_manager.py  reference_mark_service.py
layerforge/models/slicing/: __init__.py  slice.py  slicer_service.py
layerforge/svg/: __init__.py  slice_svg_drawer.py  svg_generator.py
layerforge/svg/drawing/: __init__.py  shape_factory.py  strategy_context.py
layerforge/utils/: __init__.py  file_operations.py  geometry.py  loader_initialization.py  optional_dependencies.py  shape_strategies.py
layerforge/writers/: __init__.py  svg_writer.py
scripts/: gen_ref_pages.py  simple_mesh_example.py
src/layerforge/: cli.py
src/layerforge/models/: model_factory.py
src/layerforge/svg/: __init__.py  slice_svg_drawer.py  svg_generator.py
src/layerforge/utils/: file_operations.py  geometry.py  loader_initialization.py  shape_strategies.py
src/layerforge/writers/: svg_writer.py
tests/: conftest.py  test_arrow_drawing_strategy.py  test_calculator_get_potential_marks.py  test_cli.py  test_example_integration.py  test_file_operations.py  test_loader_factory.py  test_loader_initialization.py  test_model_factory.py  test_optional_dependencies.py  test_process_model_validation.py  test_reference_mark_adjuster.py  test_reference_mark_adjuster_extra.py  test_reference_mark_calculator.py  test_reference_mark_config.py  test_reference_mark_manager.py  test_reference_mark_property.py  test_shape_factory.py  test_slice_mark_inheritance.py  test_slice_mark_size.py  test_slice_process_reference_marks.py  test_slicer_service.py  test_svg_output.py  test_trimesh_loader.py
(+22 files in other folders)
