[tool.poetry]
name = "layerforge"
version = "0.1.0"
description = "A 3D Model Slicing and SVG Generation Application"
authors = ["Caitlyn O'Hanna <caitlyn.ohanna@gmail.com>"]
readme = "README.md"
packages = [{include = "layerforge"}]

[tool.poetry.dependencies]
Rtree = "^1.2"
click = "^8.1"
networkx = "^3.3"
numpy = "^2.0"
python = "^3.12"
scipy = "^1.14"
shapely = "^2.0"
svgwrite = "^1.4"
trimesh = "^4.4"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "*"
myst-parser = "*"
sphinx = "*"

[tool.poetry.scripts]
layerforge = "layerforge.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
