[tool.poetry]
name = "layerforge"
version = "0.1.0"
description = "A 3D Model Slicing and SVG Generation Application"
authors = ["Caitlyn O'Hanna <caitlyn.ohanna@gmail.com>"]
readme = "README.md"
packages = [{include = "layerforge"}]

[tool.poetry.dependencies]
Rtree = "^1.2"
click = "^8.1"
networkx = "^3.3"
numpy = "^2.0"
python = "^3.12"
scipy = "^1.14"
shapely = "^2.0"
svgwrite = "^1.4"
trimesh = "^4.4"
pydantic = "^2.6"

[tool.poetry.extras]
full = [
    "Rtree",
    "networkx",
    "numpy",
    "scipy",
    "shapely",
    "svgwrite",
    "trimesh",
    "pydantic",
]
[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "*"
mkdocs-material = "*"
mkdocstrings-python = "*"
mkdocs-gen-files = "*"
mkdocs-include-markdown-plugin = "*"
mkdocs-click = "*"
mkdocs-literate-nav = "*"
mkdocs-section-index = "*"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
hypothesis = "*"

[tool.poetry.scripts]
layerforge = "layerforge.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
